<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.solomon.lagosdevelopers.viewmodel.DevelopersViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/developer_details_layout"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_top_frag_pg_20"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:id="@+id/dev_img_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_10"
                android:clipChildren="true"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/developer_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_account_box_24"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_frag_pg_20"
                android:fontFamily="@font/lato"
                android:text="@string/login"
                android:textSize="14sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev_img_card"/>

            <TextView
                android:id="@+id/dev_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:text="@string/id"
                android:textSize="16sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_text"/>

            <View
                android:id="@+id/view_one"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="20dp"
                android:background="#457AA5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev_login" />

            <TextView
                android:id="@+id/id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_frag_pg_20"
                android:fontFamily="@font/lato"
                android:text="@string/id"
                android:textSize="14sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_one"/>

            <TextView
                android:id="@+id/dev_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:text="@string/id"
                android:textSize="16sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_text"/>

            <View
                android:id="@+id/view_two"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="20dp"
                android:background="#457AA5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev_id" />

            <TextView
                android:id="@+id/url_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_frag_pg_20"
                android:fontFamily="@font/lato"
                android:text="@string/url"
                android:textSize="14sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_two"/>

            <TextView
                android:id="@+id/dev_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:text="@string/id"
                android:textSize="16sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/url_text"/>

            <View
                android:id="@+id/view_three"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="20dp"
                android:background="#457AA5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev_url" />

            <TextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_frag_pg_20"
                android:fontFamily="@font/lato"
                android:text="@string/score"
                android:textSize="14sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_three"/>

            <TextView
                android:id="@+id/dev_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:text="@string/id"
                android:textSize="16sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/score_text"/>

            <View
                android:id="@+id/view_four"
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="20dp"
                android:background="#457AA5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dev_score" />

            <TextView
                android:id="@+id/type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_frag_pg_20"
                android:fontFamily="@font/lato"
                android:text="@string/type"
                android:textSize="14sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_four"/>

            <TextView
                android:id="@+id/dev_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:text="@string/id"
                android:textSize="16sp"
                android:textColor="#06677E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_text"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_btn"
                style="@style/MovieTicketBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:theme="@style/Theme.MaterialComponents"
                app:layout_constraintTop_toBottomOf="@id/dev_type" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>